# quantum-comp

./: Cargo.toml
src/: main.rs
src/core/: full_adder.rs  mod.rs
src/model/: mod.rs  qubit.rs  register.rs
