[package]
name = "quantum-comp"
version = "0.1.0"
edition = "2024"

[lints.clippy]
enum_glob_use = "forbid"
unwrap_used = "forbid"
try_err = "forbid"
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }


[dependencies]
num-complex = "0.4.6"
num-traits = "0.2.19"
rand = "0.9.2"

[dev-dependencies]
rstest = "0.26.1"
